--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-REACT_APP_API_URL=https://bookshelf.jk/api
+REACT_APP_API_URL=http://localhost:8989/api
 REACT_APP_AUTH_URL=https://auth-provider.jk/auth
 
 # Because we have a custom jest setup for the workshop we need to skip the warnings
