--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-REACT_APP_API_URL=http://localhost:8989/api
-REACT_APP_AUTH_URL=https://auth-provider.jk/auth
+REACT_APP_API_URL=http://booker.io/api
+REACT_APP_AUTH_URL=https://auth.io/auth
 
 # Because we have a custom jest setup for the workshop we need to skip the warnings
 SKIP_PREFLIGHT_CHECK=true
