--- a/package.json
+++ b/package.json
@@ -7,19 +7,23 @@
     "@emotion/react": "^11.4.0",
     "@emotion/styled": "^11.3.0",
     "@reach/dialog": "^0.15.0",
+    "@reach/menu-button": "^0.15.1",
     "@reach/tooltip": "^0.15.0",
     "@reach/visually-hidden": "^0.15.0",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "bootstrap": "^5.0.0",
+    "history": "^5.0.0",
+    "http-proxy-middleware": "^2.0.0",
     "match-sorter": "^6.3.0",
     "msw": "^0.28.2",
     "node-match-path": "^0.6.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
-    "react-router-dom": "^5.2.0",
+    "react-router": "6.0.0-beta.0",
+    "react-router-dom": "6.0.0-beta.0",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.0.1"
   },
