--- a/package.json
+++ b/package.json
@@ -20,8 +20,9 @@
     "node-match-path": "^0.6.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-error-boundary": "^3.1.3",
     "react-icons": "^4.2.0",
-    "react-query": "^3.16.0",
+    "react-query": "2.1.1",
     "react-router": "6.0.0-beta.0",
     "react-router-dom": "6.0.0-beta.0",
     "react-scripts": "4.0.3",
