feat(components): ✨ add rating and reorg

--- a/.env
+++ b/.env
@@ -6,3 +6,6 @@ SKIP_PREFLIGHT_CHECK=true
 
 # To support custom jsx pragma (for emotion)
 DISABLE_NEW_JSX_TRANSFORM=true
+
+# for absolute import
+NODE_PATH=src/
