--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "bootstrap": "^5.0.0",
+    "debounce-fn": "^5.0.0",
     "history": "^5.0.0",
     "match-sorter": "^6.3.0",
     "msw": "^0.28.2",
