--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-REACT_APP_API_URL=http://booker.io/api
+REACT_APP_API_URL=http://bookr.io/api
 REACT_APP_AUTH_URL=https://auth.io/auth
 
 # Because we have a custom jest setup for the workshop we need to skip the warnings
