--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Booker",
-  "name": "Booker 📚",
+  "short_name": "Bookr",
+  "name": "Bookr 📚",
   "start_url": ".",
   "display": "standalone",
   "theme_color": "#000000",
