--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "react-error-boundary": "^3.1.3",
     "react-icons": "^4.2.0",
     "react-parallax-tilt": "^1.5.14",
-    "react-query": "2.1.1",
+    "react-query": "2.15.4",
+    "react-query-devtools": "^2.6.3",
     "react-router": "6.0.0-beta.0",
     "react-router-dom": "6.0.0-beta.0",
     "react-scripts": "4.0.3",
