--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-router": "6.0.0-beta.0",
     "react-router-dom": "6.0.0-beta.0",
     "react-scripts": "4.0.3",
+    "stop-runaway-react-effects": "^2.0.0",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
