--- a/package.json
+++ b/package.json
@@ -32,9 +32,12 @@
     "stop-runaway-react-effects": "^2.0.0",
     "web-vitals": "^1.0.1"
   },
+  "devDependencies": {
+    "react-test-renderer": "^17.0.2"
+  },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "react-scripts build --profile",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
