--- a/package.json
+++ b/package.json
@@ -33,7 +33,9 @@
     "web-vitals": "^1.0.1"
   },
   "devDependencies": {
-    "react-test-renderer": "^17.0.2"
+    "prettier": "^2.3.0",
+    "react-test-renderer": "^17.0.2",
+    "serve": "^11.3.2"
   },
   "scripts": {
     "start": "react-scripts start",
