--- a/package.json
+++ b/package.json
@@ -10,13 +10,15 @@
     "@reach/menu-button": "^0.15.1",
     "@reach/tooltip": "^0.15.0",
     "@reach/visually-hidden": "^0.15.0",
+    "@testing-library/cypress": "^7.0.6",
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.7",
-    "@testing-library/react-hooks": "^7.0.0",
+    "@testing-library/react-hooks": "^5.1.2",
     "@testing-library/user-event": "^13.1.9",
     "bootstrap": "^5.0.0",
     "debounce-fn": "^5.0.0",
     "history": "^5.0.0",
+    "jest": "26.6.0",
     "match-sorter": "^6.3.0",
     "msw": "^0.28.2",
     "node-match-path": "^0.6.3",
