--- a/package.json
+++ b/package.json
@@ -10,15 +10,9 @@
     "@reach/menu-button": "^0.15.1",
     "@reach/tooltip": "^0.15.0",
     "@reach/visually-hidden": "^0.15.0",
-    "@testing-library/cypress": "^7.0.6",
-    "@testing-library/jest-dom": "^5.12.0",
-    "@testing-library/react": "^11.2.7",
-    "@testing-library/react-hooks": "^5.1.2",
-    "@testing-library/user-event": "^13.1.9",
     "bootstrap": "^5.0.0",
     "debounce-fn": "^5.0.0",
     "history": "^5.0.0",
-    "jest": "26.6.0",
     "match-sorter": "^6.3.0",
     "msw": "^0.28.2",
     "node-match-path": "^0.6.3",
@@ -28,7 +22,6 @@
     "react-icons": "^4.2.0",
     "react-parallax-tilt": "^1.5.14",
     "react-query": "2.15.4",
-    "react-query-devtools": "^2.6.3",
     "react-router": "6.0.0-beta.0",
     "react-router-dom": "6.0.0-beta.0",
     "react-scripts": "4.0.3",
@@ -36,7 +29,14 @@
     "web-vitals": "^1.0.1"
   },
   "devDependencies": {
+    "@testing-library/cypress": "^7.0.6",
+    "@testing-library/jest-dom": "^5.12.0",
+    "@testing-library/react": "^11.2.7",
+    "@testing-library/react-hooks": "^5.1.2",
+    "@testing-library/user-event": "^13.1.9",
+    "faker": "^5.5.3",
     "prettier": "^2.3.0",
+    "react-query-devtools": "^2.6.3",
     "react-test-renderer": "^17.0.2",
     "serve": "^11.3.2"
   },
