--- a/package.json
+++ b/package.json
@@ -10,6 +10,11 @@
     "@reach/menu-button": "^0.15.1",
     "@reach/tooltip": "^0.15.0",
     "@reach/visually-hidden": "^0.15.0",
+    "@testing-library/cypress": "^7.0.6",
+    "@testing-library/jest-dom": "^5.12.0",
+    "@testing-library/react": "^11.2.7",
+    "@testing-library/react-hooks": "^5.1.2",
+    "@testing-library/user-event": "^13.1.9",
     "bootstrap": "^5.0.0",
     "debounce-fn": "^5.0.0",
     "history": "^5.0.0",
@@ -29,11 +34,6 @@
     "web-vitals": "^1.0.1"
   },
   "devDependencies": {
-    "@testing-library/cypress": "^7.0.6",
-    "@testing-library/jest-dom": "^5.12.0",
-    "@testing-library/react": "^11.2.7",
-    "@testing-library/react-hooks": "^5.1.2",
-    "@testing-library/user-event": "^13.1.9",
     "faker": "^5.5.3",
     "prettier": "^2.3.0",
     "react-query-devtools": "^2.6.3",
@@ -45,6 +45,11 @@
     "build": "react-scripts build --profile",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
+  },
+  "jest": {
+    "transformIgnorePatterns": [
+      "node_modules/(?!(debounce-fn)/)"
+    ]
   },
   "eslintConfig": {
     "extends": [
