--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
     "serve": "^11.3.2"
   },
   "lint-staged": {
-    "src/**/*.{js,jsx,ts,tsx,json,css,scss,md}": [
+    "**/*.{js,jsx,ts,tsx,json,css,scss,md}": [
       "prettier --write"
     ]
   },
