--- a/package.json
+++ b/package.json
@@ -39,6 +39,8 @@
     "@types/react": "^17.0.5",
     "@types/react-dom": "^17.0.5",
     "cypress": "^7.4.0",
+    "cypress-hmr-restarter": "^2.0.2",
+    "eslint-plugin-cypress": "^2.11.3",
     "faker": "^5.5.3",
     "husky": "^6.0.0",
     "lint-staged": "^11.0.0",
@@ -56,7 +58,8 @@
     "build": "react-scripts build --profile",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "cypress": "cypress open",
+    "cy:open": "cypress open",
+    "cy:run": "cypress run",
     "lintstaged": "lint-staged",
     "postinstall": "husky install"
   },
